# polymd

./: .gitignore  BENCHMARK.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vk_centerer_model.json
scripts/: blind_tg.py  compare_exp.py  exp_reference.py  pipeline.py
src/polymd/: __init__.py  blind_tg.py  cli.py  pipeline.py  tg_blind.py  tg_kinetics.py  vk_centerer.py  webapp.py
src/polymd/static/: index.html
src/tg_ml/: __init__.py  cli.py  md_build.py  tg_blind.py  tg_kinetics.py  tg_prior.py  webapp.py
src/tg_ml/static/: index.html
